# news_wizard

./: .gitignore  Cargo.toml  README.md  index.ts  news_item.ts  package-lock.json  package.json  response.html  tsconfig.json
dto/: Cargo.toml
dto/src/: lib.rs
front/: package-lock.json  package.json
front/src/: app.css  app.html
front/src/components/: Main.svelte  ResponseObject.ts  SearchBar.svelte
front/static/assets/: particles.json
meilisearch_api/: Cargo.toml
meilisearch_api/src/: lib.rs
news_data_services/: news_mapper.ts  news_utils.ts
news_data_services/url/: news_api_url_service.ts  url.ts
news_fetch/: Cargo.toml
news_fetch/src/: main.rs  news_data.rs  news_service.rs  url.rs
news_fetch/src/news/: article.rs  data.rs  mod.rs  results.rs
src/: bot.ts  index.ts  user_service.ts
src/news_data_services/: news_mapper.ts  news_utils.ts
src/news_data_services/url/: news_api_url_service.ts
src/types/: mod.rs  news_item.ts  user_data.ts
src/world_news_services/: news_mapper.ts  news_utils.ts
src/world_news_services/url/: news_api_url_service.ts
user_data/: 5162113857.json  5669169257.json
world_news_services/: news_api_url.ts  news_item.ts  news_mapper.ts  news_utils.ts
world_news_services/url/: url.ts
