[package]
name = "meilisearch_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dto = { path = "../dto" }
meilisearch-sdk = "0.24.3"
anyhow = "1.0.79"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
chrono = { version = "0.4.33", features = ["serde"] }
uuid = {version = "1.7", features = ["serde", "v4"]}
