[package]
name = "news_fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = "0.11.24"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
dto = { path = "../dto" }
meilisearch_api = { path = "../meilisearch_api" }
meilisearch-sdk = "0.24.3"
chrono = { version = "0.4.33", features = ["serde"] }
uuid = {version = "1.7", features = ["serde", "v4"]}